# logcolor

./: .Makefile.in  .gitattributes  .gitignore  .readthedocs.yaml  DESCRIPTION.rst  Makefile  README.md  copying  pyproject.toml  pyver.py  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  publish.yml  publish_compiled.yml  test.yml
docs/: Makefile
docs/source/: changelog.rst  conf.py  index.rst
docs/source/topics/: introduction.rst  usage.rst
src/log_color/: __init__.py  colors.py  compat.py  formatters.py  lib.py  regex.py
src/logcolor/: __init__.py  colors.py  formatters.py  regex.py
tests/: __init__.py  color_tests.py  custom_asserts.py  formatter_tests.py  import_tests.py  lib.py  regex_tests.py  test_colors.py  test_formatters.py  test_imports.py  test_lib.py  test_regexes.py
