[metadata]
name = log_color
description = Simple log formatters for colored output
long_description = file: DESCRIPTION.rst
long_description_content_type = text/x-rst; charset=UTF-8
author_email = oldspiceap@gmail.com
author = Brant Watson
keywords = logging, color, formatter
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/induane/logcolor/issues
    Home Page = https://github.com/induane/logcolor
    Changelog = https://github.com/induane/logcolor/blob/master/docs/source/changelog.rst

[options]
python_requires = >= 3.6
packages = find:
package_dir =
    = src
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    build
    setuptools_scm
    mypy
    pyre-check
    tox
    twine
    wheel
docs =
    sphinx
    sphinx_rtd_theme
